--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -235,9 +235,6 @@ jobs:
       execute:
         type: boolean
         default: true
-      test_path:
-        type: string
-        default: tests/unit_tests_old
     docker:
       - image: "python:<<parameters.python_version_major>>.<<parameters.python_version_minor>>"
     parallelism: << parameters.parallelism >>
@@ -262,7 +259,7 @@ jobs:
                 name: Run tests
                 no_output_timeout: 10m
                 command: |
-                  CI_PYTEST_SPLIT_ARGS="--splits $CIRCLE_NODE_TOTAL --group $(( $CIRCLE_NODE_INDEX + 1 ))" tox -v -e << parameters.toxenv >> << parameters.test_path >>
+                  CI_PYTEST_SPLIT_ARGS="--splits $CIRCLE_NODE_TOTAL --group $(( $CIRCLE_NODE_INDEX + 1 ))" tox -v -e << parameters.toxenv >>
             - save-test-results
             # conditionally post a notification to slack if the job failed
             - when:
@@ -1170,6 +1167,7 @@ workflows:
           name: "unit-s_base-lin-pylaunch<<matrix.python_version_major>><<matrix.python_version_minor>>"
           toxenv: "pylaunch<<matrix.python_version_major>><<matrix.python_version_minor>>,covercircle"
           test_path: "tests/unit_tests/tests_launch"
+
       #
       # Functional tests with yea on Linux (base only)
       #
