--- a/pytest.ini
+++ b/pytest.ini
@@ -17,5 +17,6 @@ norecursedirs =
     build/
     tests/functional_tests
     tests/standalone_tests
+    tests/unit_tests
     tests/unit_tests/tests_*
     tests/unit_tests_old/tests_*
