fix(sdk): pex pex pex

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -331,6 +331,46 @@ jobs:
                 # taken from slack-secrets context
                 channel: $SLACK_SDK_NIGHTLY_CI_CHANNEL
 
+  pex-shmex:
+    parameters:
+      python_version_major:
+        type: integer
+        default: 3
+      python_version_minor:
+        type: integer
+        default: 8
+    docker:
+      - image: "python:<<parameters.python_version_major>>.<<parameters.python_version_minor>>"
+      - image: gcr.io/wandb-production/local-testcontainer:<< pipeline.parameters.wandb_server_tag >>
+        auth:
+          username: _json_key
+          password: $GCP_SERVICE_ACCOUNT_JSON_DECODED
+        environment:
+          CI: 1
+          WANDB_ENABLE_TEST_CONTAINER: true
+    resource_class: small
+    working_directory: /mnt/ramdisk
+    steps:
+      - checkout
+      - run:
+          name: Install system deps
+          command: |
+            apt-get update && apt-get install -y libsndfile1 ffmpeg
+      - run:
+          name: Install pex and do some shmex
+          command: |
+            pip install -U pip
+            pip install pex
+            while ! curl http://localhost:8080/healthz; do sleep 1; done
+          no_output_timeout: 5m
+      - run:
+          name: Run pex test
+          no_output_timeout: 5m
+          command: |
+            pex . -o wandb.pex
+            ./wandb.pex -c "import wandb; wandb.init(); wandb.finish()"
+      - save-test-results
+
   win:
     parameters:
       python_version_major:
@@ -1253,6 +1293,12 @@ workflows:
           toxenv: "unit-s_nb-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
           parallelism: 1
           xdist: 1
+      #
+      # pex test
+      #
+      - pex-shmex:
+          name: "pex-shmex"
+          toxenv: "pex-shmex"
 
   # todo: needs love
   #  manual_test:
