oora my lomim gnutsya shvedy

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -339,15 +339,15 @@ jobs:
       python_version_minor:
         type: integer
         default: 8
-    docker:
-      - image: "python:<<parameters.python_version_major>>.<<parameters.python_version_minor>>"
-      - image: gcr.io/wandb-production/local-testcontainer:<< pipeline.parameters.wandb_server_tag >>
-        auth:
-          username: _json_key
-          password: $GCP_SERVICE_ACCOUNT_JSON_DECODED
-        environment:
-          CI: 1
-          WANDB_ENABLE_TEST_CONTAINER: true
+#    docker:
+#      - image: "python:<<parameters.python_version_major>>.<<parameters.python_version_minor>>"
+#      - image: gcr.io/wandb-production/local-testcontainer:<< pipeline.parameters.wandb_server_tag >>
+#        auth:
+#          username: _json_key
+#          password: $GCP_SERVICE_ACCOUNT_JSON_DECODED
+#        environment:
+#          CI: 1
+#          WANDB_ENABLE_TEST_CONTAINER: true
     resource_class: small
     working_directory: /mnt/ramdisk
     steps:
@@ -367,8 +367,9 @@ jobs:
           name: Run pex test
           no_output_timeout: 5m
           command: |
-            pex . -o wandb.pex
-            ./wandb.pex -c "import wandb; wandb.init(); wandb.finish()"
+            pex wandb==0.13.4 -o wandb.pex
+            # pex . -o wandb.pex
+            ./wandb.pex -c "import wandb; wandb.init(mode='offline'); wandb.finish()"
       - save-test-results
 
   win:
