test(sdk): add tests for protobuf version compatibility

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -363,6 +363,31 @@ jobs:
             ./wandb.pex -c "import wandb; wandb.init(mode='offline'); wandb.finish()"
       - save-test-results
 
+  protobuf-compatability:
+    parameters:
+      python_version_major:
+        type: integer
+        default: 3
+      python_version_minor:
+        type: integer
+        default: 8
+    docker:
+      - image: "python:<<parameters.python_version_major>>.<<parameters.python_version_minor>>"
+    resource_class: small
+    working_directory: /mnt/ramdisk
+    steps:
+      - checkout
+      - run:
+          name: Install system deps
+          command: |
+            apt-get update && apt-get install -y libsndfile1 ffmpeg
+      - run:
+          name: Check protobuf version compatibility
+          command: |
+            python tools/check_protobuf_version_compatibility.py
+          no_output_timeout: 5m
+      - save-test-results
+
   win:
     parameters:
       python_version_major:
@@ -1290,6 +1315,16 @@ workflows:
       #
       - pex:
           name: "pex"
+      #
+      # protobuf compatibility tests
+      #
+      - protobuf-compatability:
+          matrix:
+            parameters:
+              python_version_major: [ 3 ]
+              python_version_minor: [ 7, 8, 9, 10 ]
+          name: "protobuf-compatability-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
+
 
   # todo: needs love
   #  manual_test:
@@ -1387,8 +1422,7 @@ workflows:
       - pip_install_wandb:
           matrix:
             parameters:
-              # todo: replace 3.11-rc with 3.11 when it's released on 2022-10-24
-              python_version: ["3.6", "3.7", "3.8", "3.9", "3.10", "3.11-rc"]
+              python_version: ["3.6", "3.7", "3.8", "3.9", "3.10", "3.11"]
           context: slack-secrets
           notify_on_failure: << pipeline.parameters.manual_nightly_slack_notify >>
           requires:
