--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1087,7 +1087,7 @@ workflows:
       - pip_install_wandb:
           matrix:
             parameters:
-              python_version: [3.6, 3.7, 3.8, 3.9, 3.10, 3.11]
+              python_version: ["3.6", "3.7", "3.8", "3.9", "3.10", "3.11"]
           context: slack-secrets
           notify_on_failure: true
           requires:
@@ -1185,7 +1185,6 @@ workflows:
           matrix:
             parameters:
               python_version_major: [3]
-              # todo: replace 3.11-rc with 3.11 when it's released on 2022-10-24
               python_version_minor: [6, 7, 8, 9, 10, 11]
           name: "unit-s_base_mock_server-lin-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
           toxenv: "py<<matrix.python_version_major>><<matrix.python_version_minor>>,covercircle"
@@ -1280,7 +1279,7 @@ workflows:
           matrix:
             parameters:
               python_version_major: [3]
-              python_version_minor: ["6"]
+              python_version_minor: [6]
           name: "unit-s_nb-lin-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
           toxenv: "unit-s_nb-py<<matrix.python_version_major>><<matrix.python_version_minor>>,unit-covercircle"
       - win:
