--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -34,7 +34,7 @@ pyarrow
 metaflow>=2.3.5
 xgboost
 lightgbm
-rdkit-pypi; python_version < '3.11' sys_platform != 'darwin' or (sys_platform == 'darwin' and platform.machine != 'arm64')
+rdkit-pypi; python_version < '3.11' and sys_platform != 'darwin' or (sys_platform == 'darwin' and platform.machine != 'arm64')
 rdkit-pypi; python_version > '3.7' and sys_platform == 'darwin' and platform.machine == 'arm64'
 .[launch]
 .[sweeps]; sys_platform != 'darwin' or (sys_platform == 'darwin' and platform.machine != 'arm64')
