--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,4 @@ pathtools # supports vendored version of watchdog 0.9.0
 setproctitle
 setuptools
 dataclasses; python_version < '3.7'
+typing_extensions; python_version < '3.10'
