--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ envlist=
 
 [base]
 setenv =
-    YEA_WANDB_VERSION = 0.8.13
+    YEA_WANDB_VERSION = https://github.com/wandb/yea-wandb/archive/model_reg/artifact_collection_support_in_public_api_yea.zip
 
 [unitbase]
 deps =
