--- a/tests/standalone_tests/shards/gke_cpu/Dockerfile
+++ b/tests/standalone_tests/shards/gke_cpu/Dockerfile
@@ -2,7 +2,7 @@ FROM ubuntu:20.04
 
 ARG DEBIAN_FRONTEND=noninteractive
 
-ARG PYTHON_MINOR_VERSION=9
+ARG PYTHON_VERSION=3.9
 ARG GIT_BRANCH=master
 ARG TOX_VERSION=3.24.0
 ARG UTC_DATE
@@ -14,9 +14,9 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     ca-certificates \
     sudo \
     git \
-    python3.${PYTHON_MINOR_VERSION} \
+    python${PYTHON_VERSION} \
     python3-pip \
-    python3.${PYTHON_MINOR_VERSION}-dev \
+    python${PYTHON_VERSION}-dev \
     build-essential \
     libsndfile1 \
     ffmpeg \
@@ -46,4 +46,4 @@ RUN PATH=/home/sdk/.local/bin:$PATH
 WORKDIR /wandb/wandb
 ENV DATE=$UTC_DATE
 #CMD ["tail", "-f", "/dev/null"]
-CMD ["python", "-m", "tox", "-v", "-e", "standalone-cpu-py3${PYTHON_MINOR_VERSION},pod-store"]
+CMD ["python", "-m", "tox", "-v", "-e", "standalone-cpu-py39,pod-store"]
