--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1467,10 +1467,10 @@ workflows:
           notify_on_failure: << pipeline.parameters.manual_nightly_slack_notify >>
           notify_on_success: << pipeline.parameters.manual_nightly_slack_notify >>
           execute: << pipeline.parameters.manual_nightly_execute_shard_standalone_gpu >>
-      - slack_notify:
-          execute: << pipeline.parameters.manual_nightly_slack_notify >>
-          name: "slack-notify-on-finish"
-          context: slack-secrets
-          requires:
-            - shut_down_cluster
-          message: ":checkered_flag: *Manual cloud run finished!*"
+#      - slack_notify:
+#          execute: << pipeline.parameters.manual_nightly_slack_notify >>
+#          name: "slack-notify-on-finish"
+#          context: slack-secrets
+#          requires:
+#            - shut_down_cluster
+#          message: ":checkered_flag: *Manual cloud run finished!*"
