--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1437,11 +1437,11 @@ workflows:
             - "slack-notify-on-start"
           context: slack-secrets
           notify_on_failure: << pipeline.parameters.manual_nightly_slack_notify >>
-#      - shut_down_cluster:
-#          requires:
-#            - spin_up_cluster
-#          context: slack-secrets
-#          notify_on_failure: << pipeline.parameters.manual_nightly_slack_notify >>
+      - shut_down_cluster:
+          requires:
+            - spin_up_cluster
+          context: slack-secrets
+          notify_on_failure: << pipeline.parameters.manual_nightly_slack_notify >>
       # run the tests
       - cloud_test:
           name: "cloud-test-cpu"
@@ -1467,10 +1467,10 @@ workflows:
           notify_on_failure: << pipeline.parameters.manual_nightly_slack_notify >>
           notify_on_success: << pipeline.parameters.manual_nightly_slack_notify >>
           execute: << pipeline.parameters.manual_nightly_execute_shard_standalone_gpu >>
-#      - slack_notify:
-#          execute: << pipeline.parameters.manual_nightly_slack_notify >>
-#          name: "slack-notify-on-finish"
-#          context: slack-secrets
-#          requires:
-#            - shut_down_cluster
-#          message: ":checkered_flag: *Manual cloud run finished!*"
+      - slack_notify:
+          execute: << pipeline.parameters.manual_nightly_slack_notify >>
+          name: "slack-notify-on-finish"
+          context: slack-secrets
+          requires:
+            - shut_down_cluster
+          message: ":checkered_flag: *Manual cloud run finished!*"
