--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Click>=7.0,!=8.0.0  # click 8.0.0 is broken
 GitPython>=1.0.0
 requests>=2.0.0,<3
-httpx>=0.23.0,<24
+httpx>=0.22.0,<23  # httpx 0.23.0 dropped support for Python 3.6
 promise>=2.0,<3
 shortuuid>=0.5.0
 psutil>=5.0.0
