--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ orbs:
   win: circleci/windows@5.0.0
   slack: circleci/slack@4.10.1
   go: circleci/go@1.7.1
+  gcloud: circleci/gcp-cli@3.0.0
   gke: circleci/gcp-gke@1.4.0
 
 parameters:
