--- a/tox.ini
+++ b/tox.ini
@@ -419,7 +419,9 @@ deps =
     -r{toxinidir}/requirements.txt
     func-s_{base,metaflow}-py{36,37,38,39,310}: -r{toxinidir}/requirements_dev.txt
     pytest-mock
-    yea-wandb=={env:YEA_WANDB_VERSION}
+    https://github.com/wandb/yea/archive/mitm-1.zip
+    https://github.com/wandb/yea-wandb/archive/mitm-1.zip
+    # yea-wandb=={env:YEA_WANDB_VERSION}
 extras =
     func-s_service-py{36,37,38,39,310}: service
     func-s_grpc-py{36,37,38,39,310}: grpc
@@ -515,7 +517,9 @@ deps =
     -r{toxinidir}/requirements.txt
     standalone-{cpu,gpu,tpu,local}-py{36,37,38,39,310}: -r{toxinidir}/requirements_dev.txt
     pytest-mock
-    yea-wandb=={env:YEA_WANDB_VERSION}
+    https://github.com/wandb/yea/archive/mitm-1.zip
+    https://github.com/wandb/yea-wandb/archive/mitm-1.zip
+    # yea-wandb=={env:YEA_WANDB_VERSION}
 whitelist_externals =
     date
     echo
