--- a/tox.ini
+++ b/tox.ini
@@ -422,7 +422,7 @@ deps =
     https://github.com/wandb/yea/archive/mitm-1.zip
     https://github.com/wandb/yea-wandb/archive/mitm-1.zip
     # yea-wandb=={env:YEA_WANDB_VERSION}
-    # BUMP2
+    # bumpit3
 extras =
     func-s_service-py{36,37,38,39,310}: service
     func-s_grpc-py{36,37,38,39,310}: grpc
