--- a/tox.ini
+++ b/tox.ini
@@ -419,10 +419,9 @@ deps =
     -r{toxinidir}/requirements.txt
     func-s_{base,metaflow}-py{36,37,38,39,310}: -r{toxinidir}/requirements_dev.txt
     pytest-mock
-    https://github.com/wandb/yea/archive/mitm-1.zip
-    https://github.com/wandb/yea-wandb/archive/mitm-1.zip
+    git+https//github.com/wandb/yea@mitm-1.zip#egg=yea
+    git+https//github.com/wandb/yea-wandb@mitm-1.zip#egg=yea_wandb
     # yea-wandb=={env:YEA_WANDB_VERSION}
-    # bumpit3
 extras =
     func-s_service-py{36,37,38,39,310}: service
     func-s_grpc-py{36,37,38,39,310}: grpc
