--- a/tox.ini
+++ b/tox.ini
@@ -419,8 +419,8 @@ deps =
     -r{toxinidir}/requirements.txt
     func-s_{base,metaflow}-py{36,37,38,39,310}: -r{toxinidir}/requirements_dev.txt
     pytest-mock
-    git+https://github.com/wandb/yea@mitm-1.zip#egg=yea
-    git+https://github.com/wandb/yea-wandb@mitm-1.zip#egg=yea_wandb
+    git+https://github.com/wandb/yea@mitm-1#egg=yea
+    git+https://github.com/wandb/yea-wandb@mitm-1#egg=yea_wandb
     # yea-wandb=={env:YEA_WANDB_VERSION}
 extras =
     func-s_service-py{36,37,38,39,310}: service
