--- a/tox.ini
+++ b/tox.ini
@@ -422,6 +422,7 @@ deps =
     git+https://github.com/wandb/yea@mitm-1#egg=yea
     git+https://github.com/wandb/yea-wandb@mitm-1#egg=yea_wandb
     # yea-wandb=={env:YEA_WANDB_VERSION}
+    # bump2
 extras =
     func-s_service-py{36,37,38,39,310}: service
     func-s_grpc-py{36,37,38,39,310}: grpc
